--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.13.1",
-  "appid": "wx0a0c40d66a267545",
+  "appid": "wxd4f415abac45e5d1",
   "projectname": "music",
   "debugOptions": {
     "hidedInDevtools": []
