--- a/project.config.json
+++ b/project.config.json
@@ -117,6 +117,20 @@
           "pathName": "pages/activityDetails/index",
           "query": "id=1&type=2",
           "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/activityDetails/index",
+          "pathName": "pages/activityDetails/index",
+          "query": "id=1&type=1",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "报名",
+          "pathName": "pages/signUp/index",
+          "query": "id=1",
+          "scene": null
         }
       ]
     }
