--- a/project.config.json
+++ b/project.config.json
@@ -1,138 +1,138 @@
 {
-  "description": "项目配置文件",
-  "packOptions": {
-    "ignore": []
-  },
-  "setting": {
-    "urlCheck": false,
-    "es6": true,
-    "enhance": false,
-    "postcss": true,
-    "preloadBackgroundData": false,
-    "minified": true,
-    "newFeature": false,
-    "coverView": true,
-    "nodeModules": false,
-    "autoAudits": false,
-    "showShadowRootInWxmlPanel": true,
-    "scopeDataCheck": false,
-    "uglifyFileName": false,
-    "checkInvalidKey": true,
-    "checkSiteMap": true,
-    "uploadWithSourceMap": true,
-    "compileHotReLoad": false,
-    "useMultiFrameRuntime": false,
-    "useApiHook": true,
-    "babelSetting": {
-      "ignore": [],
-      "disablePlugins": [],
-      "outputPath": ""
-    },
-    "useIsolateContext": true,
-    "useCompilerModule": true,
-    "userConfirmedUseCompilerModuleSwitch": false,
-    "packNpmManually": false,
-    "packNpmRelationList": []
-  },
-  "compileType": "miniprogram",
-  "libVersion": "2.13.1",
-  "appid": "wxd4f415abac45e5d1",
-  "projectname": "music",
-  "debugOptions": {
-    "hidedInDevtools": []
-  },
-  "scripts": {},
-  "isGameTourist": false,
-  "simulatorType": "wechat",
-  "simulatorPluginLibVersion": {},
-  "condition": {
-    "search": {
-      "current": -1,
-      "list": []
-    },
-    "conversation": {
-      "current": -1,
-      "list": []
-    },
-    "plugin": {
-      "current": -1,
-      "list": []
-    },
-    "game": {
-      "current": -1,
-      "list": []
-    },
-    "gamePlugin": {
-      "current": -1,
-      "list": []
-    },
-    "miniprogram": {
-      "current": -1,
-      "list": [
-        {
-          "id": 0,
-          "name": "报名",
-          "pathName": "pages/signUp/index",
-          "query": "id=1",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "详情",
-          "pathName": "pages/activityDetails/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "个人",
-          "pathName": "pages/person/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "查询",
-          "pathName": "pages/resultSearch/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "付款记录",
-          "pathName": "pages/payRecord/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "成绩",
-          "pathName": "pages/resultSearch/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": 6,
-          "name": "比赛",
-          "pathName": "pages/activityDetails/index",
-          "query": "id=1&type=2",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "pages/activityDetails/index",
-          "pathName": "pages/activityDetails/index",
-          "query": "id=1&type=1",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "报名",
-          "pathName": "pages/signUp/index",
-          "query": "id=1",
-          "scene": null
-        }
-      ]
-    }
-  }
+	"description": "项目配置文件",
+	"packOptions": {
+		"ignore": []
+	},
+	"setting": {
+		"urlCheck": false,
+		"es6": true,
+		"enhance": false,
+		"postcss": true,
+		"preloadBackgroundData": false,
+		"minified": true,
+		"newFeature": false,
+		"coverView": true,
+		"nodeModules": false,
+		"autoAudits": false,
+		"showShadowRootInWxmlPanel": true,
+		"scopeDataCheck": false,
+		"uglifyFileName": false,
+		"checkInvalidKey": true,
+		"checkSiteMap": true,
+		"uploadWithSourceMap": true,
+		"compileHotReLoad": false,
+		"babelSetting": {
+			"ignore": [],
+			"disablePlugins": [],
+			"outputPath": ""
+		},
+		"useIsolateContext": true,
+		"useCompilerModule": false,
+		"userConfirmedUseCompilerModuleSwitch": false,
+		"packNpmManually": false,
+		"packNpmRelationList": [],
+		"useMultiFrameRuntime": false,
+		"useApiHook": true
+	},
+	"compileType": "miniprogram",
+	"libVersion": "2.13.1",
+	"appid": "wxd4f415abac45e5d1",
+	"projectname": "music",
+	"debugOptions": {
+		"hidedInDevtools": []
+	},
+	"scripts": {},
+	"isGameTourist": false,
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
+	"condition": {
+		"search": {
+			"current": -1,
+			"list": []
+		},
+		"conversation": {
+			"current": -1,
+			"list": []
+		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
+		"game": {
+			"current": -1,
+			"list": []
+		},
+		"gamePlugin": {
+			"current": -1,
+			"list": []
+		},
+		"miniprogram": {
+			"current": -1,
+			"list": [
+				{
+					"id": 0,
+					"name": "报名",
+					"pathName": "pages/signUp/index",
+					"query": "id=1",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "详情",
+					"pathName": "pages/activityDetails/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "个人",
+					"pathName": "pages/person/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "查询",
+					"pathName": "pages/resultSearch/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "付款记录",
+					"pathName": "pages/payRecord/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "成绩",
+					"pathName": "pages/resultSearch/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": 6,
+					"name": "比赛",
+					"pathName": "pages/activityDetails/index",
+					"query": "id=1&type=2",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/activityDetails/index",
+					"pathName": "pages/activityDetails/index",
+					"query": "id=1&type=1",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "报名",
+					"pathName": "pages/signUp/index",
+					"query": "id=1",
+					"scene": null
+				}
+			]
+		}
+	}
 }
